# Hexapod_controller-and-simulation

./: .gitignore  README.md
src/hexapod_ws/: CMakeLists.txt  package.xml
src/hexapod_ws/config/: bridge.yaml  parameters.yaml
src/hexapod_ws/description/: hexapod.urdf  hexapod.urdf.xacro
src/hexapod_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/hexapod_ws/install/hexapod_ws/lib/hexapod_ws/: hexapod_runner.py
src/hexapod_ws/install/hexapod_ws/share/ament_index/resource_index/package_run_dependencies/: hexapod_ws
src/hexapod_ws/install/hexapod_ws/share/ament_index/resource_index/parent_prefix_path/: hexapod_ws
src/hexapod_ws/install/hexapod_ws/share/hexapod_ws/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/hexapod_ws/install/hexapod_ws/share/hexapod_ws/cmake/: hexapod_wsConfig-version.cmake  hexapod_wsConfig.cmake
src/hexapod_ws/install/hexapod_ws/share/hexapod_ws/config/: parameters.yaml
src/hexapod_ws/install/hexapod_ws/share/hexapod_ws/description/: hexapod.urdf.xacro
src/hexapod_ws/install/hexapod_ws/share/hexapod_ws/environment/: ament_prefix_path.dsv  path.dsv
src/hexapod_ws/install/hexapod_ws/share/hexapod_ws/launch/: display.launch.py  gazebo.launch.py
src/hexapod_ws/launch/: display.launch.py  gazebo.launch.py  hexapod_movement.launch.py  sensor_integration.launch.py
src/hexapod_ws/log/: latest_build
src/hexapod_ws/scripts/: hexapod_runner.py  teleop_hexapod.py
